mario-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mario-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mario
  template:
    metadata:
      labels:
        component: mario
    spec:
      containers:
        - name: mario
          image: pengbai/docker-supermario
          ports:
            - containerPort: 8080
