mario-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mario-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: mario
  ports:
    - port: 8080
      targetPort: 8080
